Core/core_parser.output
   0  $accept : %entry% $end

   1  program : supcomb SEMICOLON program
   2          | supcomb EOF

   3  supcomb : VARIABLE varsz ASSIGNMENT expr

   4  expr : expr aexpr
   5       | expr PLUS expr
   6       | expr MINUS expr
   7       | expr MULTIPLY expr
   8       | expr DIVIDE expr
   9       | expr OR expr
  10       | expr AND expr
  11       | expr LT expr
  12       | expr LE expr
  13       | expr EQ expr
  14       | expr NE expr
  15       | expr GE expr
  16       | expr GT expr
  17       | TRUE
  18       | FALSE
  19       | LET defns IN expr
  20       | LETREC defns IN expr
  21       | CASE varsz OF alts
  22       | LAMBDA vars LAMBDA_DOT expr
  23       | aexpr
  24       | error

  25  aexpr : VARIABLE
  26        | MINUS NUMBER
  27        | NUMBER
  28        | CONSTRUCTOR LCURLY_BRACKET NUMBER COMMA NUMBER RCURLY_BRACKET
  29        | LPAREN expr RPAREN

  30  defns : defn SEMICOLON defns
  31        | defn

  32  defn : VARIABLE ASSIGNMENT expr

  33  alts : alt SEMICOLON alts
  34       | alt

  35  alt : LSQUARE_BRACKET NUMBER RSQUARE_BRACKET varsz ALT_ARROW expr

  36  varsz :
  37        | VARIABLE varsz

  38  vars : VARIABLE varsz

  39  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (39)

	VARIABLE  shift 3
	.  error

	program  goto 4
	supcomb  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	supcomb : VARIABLE . varsz ASSIGNMENT expr  (3)
	varsz : .  (36)

	VARIABLE  shift 6
	ASSIGNMENT  reduce 36

	varsz  goto 7


state 4
	%entry% : '\001' program .  (39)

	.  reduce 39


state 5
	program : supcomb . SEMICOLON program  (1)
	program : supcomb . EOF  (2)

	EOF  shift 8
	SEMICOLON  shift 9
	.  error


state 6
	varsz : VARIABLE . varsz  (37)
	varsz : .  (36)

	VARIABLE  shift 6
	OF  reduce 36
	ALT_ARROW  reduce 36
	LAMBDA_DOT  reduce 36
	ASSIGNMENT  reduce 36

	varsz  goto 10


state 7
	supcomb : VARIABLE varsz . ASSIGNMENT expr  (3)

	ASSIGNMENT  shift 11
	.  error


state 8
	program : supcomb EOF .  (2)

	.  reduce 2


state 9
	program : supcomb SEMICOLON . program  (1)

	VARIABLE  shift 3
	.  error

	program  goto 12
	supcomb  goto 5


state 10
	varsz : VARIABLE varsz .  (37)

	.  reduce 37


state 11
	supcomb : VARIABLE varsz ASSIGNMENT . expr  (3)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 25
	aexpr  goto 26


state 12
	program : supcomb SEMICOLON program .  (1)

	.  reduce 1


state 13
	expr : error .  (24)

	.  reduce 24


state 14
	aexpr : LPAREN . expr RPAREN  (29)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 27
	aexpr  goto 26


state 15
	expr : LET . defns IN expr  (19)

	VARIABLE  shift 28
	.  error

	defns  goto 29
	defn  goto 30


state 16
	expr : LETREC . defns IN expr  (20)

	VARIABLE  shift 28
	.  error

	defns  goto 31
	defn  goto 30


state 17
	expr : CASE . varsz OF alts  (21)
	varsz : .  (36)

	VARIABLE  shift 6
	OF  reduce 36

	varsz  goto 32


state 18
	expr : LAMBDA . vars LAMBDA_DOT expr  (22)

	VARIABLE  shift 33
	.  error

	vars  goto 34


state 19
	aexpr : CONSTRUCTOR . LCURLY_BRACKET NUMBER COMMA NUMBER RCURLY_BRACKET  (28)

	LCURLY_BRACKET  shift 35
	.  error


state 20
	expr : TRUE .  (17)

	.  reduce 17


state 21
	expr : FALSE .  (18)

	.  reduce 18


state 22
	aexpr : NUMBER .  (27)

	.  reduce 27


state 23
	aexpr : VARIABLE .  (25)

	.  reduce 25


state 24
	aexpr : MINUS . NUMBER  (26)

	NUMBER  shift 36
	.  error


state 25
	supcomb : VARIABLE varsz ASSIGNMENT expr .  (3)
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	OR  shift 37
	AND  shift 38
	LT  shift 39
	GT  shift 40
	LE  shift 41
	GE  shift 42
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 3
	SEMICOLON  reduce 3

	aexpr  goto 49


state 26
	expr : aexpr .  (23)

	.  reduce 23


state 27
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)
	aexpr : LPAREN expr . RPAREN  (29)

	LPAREN  shift 14
	RPAREN  shift 50
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	OR  shift 37
	AND  shift 38
	LT  shift 39
	GT  shift 40
	LE  shift 41
	GE  shift 42
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	.  error

	aexpr  goto 49


state 28
	defn : VARIABLE . ASSIGNMENT expr  (32)

	ASSIGNMENT  shift 51
	.  error


state 29
	expr : LET defns . IN expr  (19)

	IN  shift 52
	.  error


state 30
	defns : defn . SEMICOLON defns  (30)
	defns : defn .  (31)

	SEMICOLON  shift 53
	IN  reduce 31


state 31
	expr : LETREC defns . IN expr  (20)

	IN  shift 54
	.  error


state 32
	expr : CASE varsz . OF alts  (21)

	OF  shift 55
	.  error


state 33
	vars : VARIABLE . varsz  (38)
	varsz : .  (36)

	VARIABLE  shift 6
	LAMBDA_DOT  reduce 36

	varsz  goto 56


state 34
	expr : LAMBDA vars . LAMBDA_DOT expr  (22)

	LAMBDA_DOT  shift 57
	.  error


state 35
	aexpr : CONSTRUCTOR LCURLY_BRACKET . NUMBER COMMA NUMBER RCURLY_BRACKET  (28)

	NUMBER  shift 58
	.  error


state 36
	aexpr : MINUS NUMBER .  (26)

	.  reduce 26


state 37
	expr : expr OR . expr  (9)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 59
	aexpr  goto 26


state 38
	expr : expr AND . expr  (10)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 60
	aexpr  goto 26


state 39
	expr : expr LT . expr  (11)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 61
	aexpr  goto 26


state 40
	expr : expr GT . expr  (16)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 62
	aexpr  goto 26


state 41
	expr : expr LE . expr  (12)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 63
	aexpr  goto 26


state 42
	expr : expr GE . expr  (15)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 64
	aexpr  goto 26


state 43
	expr : expr EQ . expr  (13)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 65
	aexpr  goto 26


state 44
	expr : expr NE . expr  (14)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 66
	aexpr  goto 26


state 45
	expr : expr PLUS . expr  (5)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 67
	aexpr  goto 26


state 46
	expr : expr MINUS . expr  (6)
	aexpr : MINUS . NUMBER  (26)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 68
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 69
	aexpr  goto 26


state 47
	expr : expr MULTIPLY . expr  (7)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 70
	aexpr  goto 26


state 48
	expr : expr DIVIDE . expr  (8)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 71
	aexpr  goto 26


state 49
	expr : expr aexpr .  (4)

	.  reduce 4


state 50
	aexpr : LPAREN expr RPAREN .  (29)

	.  reduce 29


state 51
	defn : VARIABLE ASSIGNMENT . expr  (32)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 72
	aexpr  goto 26


state 52
	expr : LET defns IN . expr  (19)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 73
	aexpr  goto 26


state 53
	defns : defn SEMICOLON . defns  (30)

	VARIABLE  shift 28
	.  error

	defns  goto 74
	defn  goto 30


state 54
	expr : LETREC defns IN . expr  (20)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 75
	aexpr  goto 26


state 55
	expr : CASE varsz OF . alts  (21)

	LSQUARE_BRACKET  shift 76
	.  error

	alts  goto 77
	alt  goto 78


state 56
	vars : VARIABLE varsz .  (38)

	.  reduce 38


state 57
	expr : LAMBDA vars LAMBDA_DOT . expr  (22)

	error  shift 13
	LPAREN  shift 14
	LET  shift 15
	LETREC  shift 16
	CASE  shift 17
	LAMBDA  shift 18
	CONSTRUCTOR  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUMBER  shift 22
	VARIABLE  shift 23
	MINUS  shift 24
	.  error

	expr  goto 79
	aexpr  goto 26


state 58
	aexpr : CONSTRUCTOR LCURLY_BRACKET NUMBER . COMMA NUMBER RCURLY_BRACKET  (28)

	COMMA  shift 80
	.  error


59: shift/reduce conflict (shift 14, reduce 9) on LPAREN
59: shift/reduce conflict (shift 19, reduce 9) on CONSTRUCTOR
59: shift/reduce conflict (shift 22, reduce 9) on NUMBER
59: shift/reduce conflict (shift 23, reduce 9) on VARIABLE
state 59
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr OR expr .  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	AND  shift 38
	LT  shift 39
	GT  shift 40
	LE  shift 41
	GE  shift 42
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 9
	RPAREN  reduce 9
	SEMICOLON  reduce 9
	IN  reduce 9
	OR  reduce 9

	aexpr  goto 49


60: shift/reduce conflict (shift 14, reduce 10) on LPAREN
60: shift/reduce conflict (shift 19, reduce 10) on CONSTRUCTOR
60: shift/reduce conflict (shift 22, reduce 10) on NUMBER
60: shift/reduce conflict (shift 23, reduce 10) on VARIABLE
state 60
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr AND expr .  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	LT  shift 39
	GT  shift 40
	LE  shift 41
	GE  shift 42
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 10
	RPAREN  reduce 10
	SEMICOLON  reduce 10
	IN  reduce 10
	OR  reduce 10
	AND  reduce 10

	aexpr  goto 49


61: shift/reduce conflict (shift 14, reduce 11) on LPAREN
61: shift/reduce conflict (shift 19, reduce 11) on CONSTRUCTOR
61: shift/reduce conflict (shift 22, reduce 11) on NUMBER
61: shift/reduce conflict (shift 23, reduce 11) on VARIABLE
state 61
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr LT expr .  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 11
	RPAREN  reduce 11
	SEMICOLON  reduce 11
	IN  reduce 11
	OR  reduce 11
	AND  reduce 11
	LT  reduce 11
	GT  reduce 11
	LE  reduce 11
	GE  reduce 11

	aexpr  goto 49


62: shift/reduce conflict (shift 14, reduce 16) on LPAREN
62: shift/reduce conflict (shift 19, reduce 16) on CONSTRUCTOR
62: shift/reduce conflict (shift 22, reduce 16) on NUMBER
62: shift/reduce conflict (shift 23, reduce 16) on VARIABLE
state 62
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)
	expr : expr GT expr .  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 16
	RPAREN  reduce 16
	SEMICOLON  reduce 16
	IN  reduce 16
	OR  reduce 16
	AND  reduce 16
	LT  reduce 16
	GT  reduce 16
	LE  reduce 16
	GE  reduce 16

	aexpr  goto 49


63: shift/reduce conflict (shift 14, reduce 12) on LPAREN
63: shift/reduce conflict (shift 19, reduce 12) on CONSTRUCTOR
63: shift/reduce conflict (shift 22, reduce 12) on NUMBER
63: shift/reduce conflict (shift 23, reduce 12) on VARIABLE
state 63
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr LE expr .  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 12
	RPAREN  reduce 12
	SEMICOLON  reduce 12
	IN  reduce 12
	OR  reduce 12
	AND  reduce 12
	LT  reduce 12
	GT  reduce 12
	LE  reduce 12
	GE  reduce 12

	aexpr  goto 49


64: shift/reduce conflict (shift 14, reduce 15) on LPAREN
64: shift/reduce conflict (shift 19, reduce 15) on CONSTRUCTOR
64: shift/reduce conflict (shift 22, reduce 15) on NUMBER
64: shift/reduce conflict (shift 23, reduce 15) on VARIABLE
state 64
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr GE expr .  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	EQ  shift 43
	NE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 15
	RPAREN  reduce 15
	SEMICOLON  reduce 15
	IN  reduce 15
	OR  reduce 15
	AND  reduce 15
	LT  reduce 15
	GT  reduce 15
	LE  reduce 15
	GE  reduce 15

	aexpr  goto 49


65: shift/reduce conflict (shift 14, reduce 13) on LPAREN
65: shift/reduce conflict (shift 19, reduce 13) on CONSTRUCTOR
65: shift/reduce conflict (shift 22, reduce 13) on NUMBER
65: shift/reduce conflict (shift 23, reduce 13) on VARIABLE
state 65
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr EQ expr .  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 13
	RPAREN  reduce 13
	SEMICOLON  reduce 13
	IN  reduce 13
	OR  reduce 13
	AND  reduce 13
	LT  reduce 13
	GT  reduce 13
	LE  reduce 13
	GE  reduce 13
	EQ  reduce 13
	NE  reduce 13

	aexpr  goto 49


66: shift/reduce conflict (shift 14, reduce 14) on LPAREN
66: shift/reduce conflict (shift 19, reduce 14) on CONSTRUCTOR
66: shift/reduce conflict (shift 22, reduce 14) on NUMBER
66: shift/reduce conflict (shift 23, reduce 14) on VARIABLE
state 66
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr NE expr .  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	PLUS  shift 45
	MINUS  shift 46
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 14
	RPAREN  reduce 14
	SEMICOLON  reduce 14
	IN  reduce 14
	OR  reduce 14
	AND  reduce 14
	LT  reduce 14
	GT  reduce 14
	LE  reduce 14
	GE  reduce 14
	EQ  reduce 14
	NE  reduce 14

	aexpr  goto 49


67: shift/reduce conflict (shift 14, reduce 5) on LPAREN
67: shift/reduce conflict (shift 19, reduce 5) on CONSTRUCTOR
67: shift/reduce conflict (shift 22, reduce 5) on NUMBER
67: shift/reduce conflict (shift 23, reduce 5) on VARIABLE
state 67
	expr : expr . aexpr  (4)
	expr : expr . PLUS expr  (5)
	expr : expr PLUS expr .  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTIPLY expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . OR expr  (9)
	expr : expr . AND expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . LE expr  (12)
	expr : expr . EQ expr  (13)
	expr : expr . NE expr  (14)
	expr : expr . GE expr  (15)
	expr : expr . GT expr  (16)

	LPAREN  shift 14
	CONSTRUCTOR  shift 19
	NUMBER  shift 22
	VARIABLE  shift 23
	MULTIPLY  shift 47
	DIVIDE  shift 48
	EOF  reduce 5
	RPAREN  reduce 5
	SEMICOLON  reduce 5
	IN  reduce 5
	OR  reduce 5
	AND  reduce 5
	LT  reduce 5
	GT  reduce 5
	LE  reduce 5
	GE  reduce 5
	EQ  reduce 5
	NE  reduce 5
	PLUS  reduce 5
	MINUS  reduce 5

	aexpr  goto 49

